tests/neg-custom-args/captures/i21401.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:15:23 ---------------------------------------
15 |  val a = usingIO[IO^](x => x) // error
   |                       ^^^^^^
   |Found:    (x: IO^'s1) ->'s2 IO^{x}
   |Required: IO^ => IO^²
   |
   |Note that capability x is not included in capture set {cap}
   |because (x : IO^'s1) is not visible from cap in value a.
   |
   |where:    =>         refers to a root capability created in value a when checking argument to parameter op of method usingIO
   |          ^          refers to the universal root capability
   |          ^² and cap refer to a root capability created in value a
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i21401.scala:16:66 ------------------------------------------------------------
16 |  val leaked: [R, X <: Boxed[IO^] -> R] -> (op: X) -> R = usingIO[Res](mkRes) // error
   |                                                                  ^^^
   |     Type variable R of method usingIO cannot be instantiated to [R, X <: Boxed[IO^] -> R] => (op: X) -> R since
   |     the part IO^ of that type captures the root capability `cap`.
   |
   |     where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:17:67 ---------------------------------------
17 |  val x: Boxed[IO^] = leaked[Boxed[IO^], Boxed[IO^] -> Boxed[IO^]](x => x) // error
   |                                                                   ^^^^^^
   |Found:    (x: Boxed[IO^]^'s3) ->'s4 Boxed[IO^²]
   |Required: Boxed[IO^] -> Boxed[IO^³]
   |
   |Note that capability cap is not included in capture set {cap²}
   |because cap is not visible from cap² in value x².
   |
   |where:    ^           refers to the universal root capability
   |          ^² and cap  refer to a root capability associated with the result type of (x: Boxed[IO^]^'s3): Boxed[IO^²]
   |          ^³ and cap² refer to a root capability created in value x²
   |          x           is a reference to a value parameter
   |          x²          is a value in method test2
   |
   | longer explanation available when compiling with `-explain`
